# openrowingmonitor-ESP32S3-ZephyrOS

./: .gitignore  Dockerfile  README.md  build.sh  esp32s3-ORM.cfg  run.sh
docs/: .eslintrc.json  index.html  index.js
docs/component/: DashboarMetric.js  PerformanceDashboard.js
docs/components/: AppDialog.js  AppElement.js  BatteryIcon.js  (+1 more)
scripts/: entrypoint.sh
web/: manifest.json
workspace/open_rowing_monitor_esp32/: .gdbinit  CMakeLists.txt  app.overlay  log.txt  parseDT.py  prj.conf  prj_debug.conf
workspace/open_rowing_monitor_esp32/boards/: esp32s3_devkitc_esp32s3_procpu.conf  esp32s3_devkitc_esp32s3_procpu.overlay
workspace/open_rowing_monitor_esp32/module/RowingSettings/: Kconfig
workspace/open_rowing_monitor_esp32/module/RowingSettings/zephyr/: module.yaml
workspace/open_rowing_monitor_esp32/modules/ble_service/BleManager/: BleManager.cpp  BleManager.h
workspace/open_rowing_monitor_esp32/modules/ble_service/FTMS/: FTMS.cpp  FTMS.h
workspace/open_rowing_monitor_esp32/modules/ble_service/RowerBridge/: RowerBridge.cpp  RowerBridge.h
workspace/open_rowing_monitor_esp32/modules/garmin_fit/fit/: CMakeLists.txt  fit.c  fit.h
workspace/open_rowing_monitor_esp32/modules/garmin_fit/fit/zephyr/: module.yaml
workspace/open_rowing_monitor_esp32/modules/garmin_fit/fit_config/: CMakeLists.txt
workspace/open_rowing_monitor_esp32/modules/garmin_fit/fit_config/zephyr/: module.yaml
workspace/open_rowing_monitor_esp32/modules/garmin_fit/fit_convert/: CMakeLists.txt  fit_convert.c  fit_convert.h
workspace/open_rowing_monitor_esp32/modules/garmin_fit/fit_convert/zephyr/: module.yaml
workspace/open_rowing_monitor_esp32/modules/garmin_fit/fit_crc/: CMakeLists.txt  fit_crc.c  fit_crc.h
workspace/open_rowing_monitor_esp32/modules/garmin_fit/fit_crc/zephyr/: module.yaml
workspace/open_rowing_monitor_esp32/modules/garmin_fit/fit_example/: CMakeLists.txt  fit_example.c
workspace/open_rowing_monitor_esp32/modules/garmin_fit/fit_example/zephyr/: module.yaml
workspace/open_rowing_monitor_esp32/modules/garmin_fit/fit_include/zephyr/: module.yaml
workspace/open_rowing_monitor_esp32/modules/garmin_fit/fit_product/: CMakeLists.txt  fit_product.c  fit_product.h
workspace/open_rowing_monitor_esp32/modules/garmin_fit/fit_product/zephyr/: module.yaml
workspace/open_rowing_monitor_esp32/modules/garmin_fit/fit_profile/: CMakeLists.txt  fit_profile.c  fit_profile.h
workspace/open_rowing_monitor_esp32/modules/garmin_fit/fit_profile/zephyr/: module.yaml
workspace/open_rowing_monitor_esp32/modules/garmin_fit/fit_ram/: CMakeLists.txt  fit_ram.c  fit_ram.h
workspace/open_rowing_monitor_esp32/modules/garmin_fit/fit_ram/zephyr/: module.yaml
workspace/open_rowing_monitor_esp32/modules/garmin_fit/fit_release/: CMakeLists.txt  fit_release.c  fit_release.h
workspace/open_rowing_monitor_esp32/modules/garmin_fit/fit_release/zephyr/: module.yaml
workspace/open_rowing_monitor_esp32/modules/hardware_driver/FakeISR/: FakeISR.cpp  FakeISR.h  Kconfig  TestData.h
workspace/open_rowing_monitor_esp32/modules/hardware_driver/FakeISR/zephyr/: module.yaml
workspace/open_rowing_monitor_esp32/modules/hardware_driver/GpioTimerService/: GpioTimerService.cpp  GpioTimerService.h  Kconfig
workspace/open_rowing_monitor_esp32/modules/hardware_driver/InputTimerService/: InputTimerService.cpp  InputTimerService.h  Kconfig
workspace/open_rowing_monitor_esp32/modules/hardware_driver/InputTimerService/zephyr/: module.yaml
workspace/open_rowing_monitor_esp32/modules/hardware_driver/StorageManager/: StorageManager.cpp  StorageManager.h
workspace/open_rowing_monitor_esp32/modules/physics_engine/FITRecorder/: CMakeLists.txt  FITRecorder.cpp
workspace/open_rowing_monitor_esp32/modules/physics_engine/RowingEngine/: RowingEngine.cpp  RowingEngine.h
workspace/open_rowing_monitor_esp32/modules/rowing_core/RowingData/: RowingData.h
workspace/open_rowing_monitor_esp32/modules/utilities/PowerManager/: PowerManager.h
workspace/open_rowing_monitor_esp32/modules/web_server/: code.txt
workspace/open_rowing_monitor_esp32/src/: main.cpp
workspace/open_rowing_monitor_esp32/src/engine/averager/: MovingAverager.cpp  MovingAverager.h
(+8 files in other folders)
