cmake_minimum_required(VERSION 3.22.0)

set(ZEPHYR_EXTRA_MODULES
    ${CMAKE_CURRENT_SOURCE_DIR}/modules/rowing_core/RowingData
    ${CMAKE_CURRENT_SOURCE_DIR}/modules/rowing_core/RowingSettings
    ${CMAKE_CURRENT_SOURCE_DIR}/modules/physics_engine/RowingEngine
    ${CMAKE_CURRENT_SOURCE_DIR}/modules/physics_engine/MovingFlankDetector
    ${CMAKE_CURRENT_SOURCE_DIR}/modules/physics_engine/MovingAverager
    # ${CMAKE_CURRENT_SOURCE_DIR}/modules/physics_engine/FITRecorder
    ${CMAKE_CURRENT_SOURCE_DIR}/modules/hardware_driver/GpioTimerService
    ${CMAKE_CURRENT_SOURCE_DIR}/modules/hardware_driver/StorageManager
    # ${CMAKE_CURRENT_SOURCE_DIR}/modules/garmin_fit/fit
    # ${CMAKE_CURRENT_SOURCE_DIR}/modules/garmin_fit/fit_config
    # ${CMAKE_CURRENT_SOURCE_DIR}/modules/garmin_fit/fit_convert
    # ${CMAKE_CURRENT_SOURCE_DIR}/modules/garmin_fit/fit_crc
    # # ${CMAKE_CURRENT_SOURCE_DIR}/modules/garmin_fit/fit_example
    # ${CMAKE_CURRENT_SOURCE_DIR}/modules/garmin_fit/fit_include
    # ${CMAKE_CURRENT_SOURCE_DIR}/modules/garmin_fit/fit_product
    # ${CMAKE_CURRENT_SOURCE_DIR}/modules/garmin_fit/fit_profile
    # ${CMAKE_CURRENT_SOURCE_DIR}/modules/garmin_fit/fit_ram
    # ${CMAKE_CURRENT_SOURCE_DIR}/modules/garmin_fit/fit_release
)

find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})

project(ESP32_ORM)

target_sources(app PRIVATE src/main.cpp)

# 2. Add Include Directories Globally
zephyr_include_directories(
    modules/rowing_core/RowingData
    modules/rowing_core/RowingSettings
    modules/physics_engine/RowingEngine
    modules/physics_engine/MovingFlankDetector
    modules/physics_engine/MovingAverager
    modules/physics_engine/FITRecorder
    modules/hardware_driver/GpioTimerService
    modules/hardware_driver/StorageManager
)
